--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             <!-- !uncomment to use table instead (will need to copy to each section) -->
             <!-- <div class="table-responsive">
-              <table class="table table-borderless text-light">
+              <table class="table table-borderless text-light table-dark table-striped">
                 <tbody>
                   <tr class="">
                     <td>Jingle Bells</td>
