High School done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Henny+Penny&family=Kaushan+Script&family=Marck+Script&family=Playfair+Display&family=Poppins&family=Rock+Salt&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Caveat&family=Henny+Penny&family=Kaushan+Script&family=Marck+Script&family=Playfair+Display&family=Poppins&family=Rock+Salt&display=swap"
+    rel="stylesheet">
 
 
 
@@ -195,12 +197,12 @@
 
           <!-- *****End JH Band Program ***** -->
 
-          <!-- ***** HS Band Program *****-->
+          <!-- ***** HS Jazz Band Program *****-->
           <div class="col-lg-12 program-item filter-high-school">
-            <h2 class="text-center mb-4"><span>Central High Band</span></h2>
+            <h2 class="text-center mb-4"><span>Central High Jazz Band</span></h2>
 
             <div class="program-content">
-              <a href="#">ADD</a><span>ADD</span>
+              <a href="#">Have Yourself a Merry Little Christmas</a><span>arr. Baylock</span>
             </div>
             <!-- <div class="soloists">
               Symphonic Band
@@ -209,7 +211,30 @@
 
           <div class="col-lg-12 program-item filter-high-school">
             <div class="program-content">
-              <a href="#">ADD</a><span>ADD</span>
+              <a href="#">Frosty the Snowman</a><span>arr. Lewis</span>
+            </div>
+            <!-- <div class="soloists">
+              Concert Band
+            </div> -->
+          </div>
+
+          <!-- *****End HS JazzBand Program ***** -->
+
+          <!-- ***** HS Band Program *****-->
+          <div class="col-lg-12 program-item filter-high-school">
+            <h2 class="text-center mb-4"><span>Central High Band</span></h2>
+
+            <div class="program-content">
+              <a href="#">A Christmas Festival</a><span>arr. Anderson</span>
+            </div>
+            <!-- <div class="soloists">
+              Symphonic Band
+            </div> -->
+          </div>
+
+          <div class="col-lg-12 program-item filter-high-school">
+            <div class="program-content">
+              <a href="#">Still, Still, Still</a><span>arr. Sebesky</span>
             </div>
             <!-- <div class="soloists">
               Concert Band
@@ -218,7 +243,7 @@
 
           <div class="col-lg-12 program-item filter-high-school">
             <div class="program-content">
-              <a href="#">ADD</a><span>ADD</span>
+              <a href="#">Sleigh Ride</a><span>Anderson</span>
             </div>
             <!-- <div class="soloists">
               Combined Band
@@ -259,6 +284,7 @@
               <li data-filter="*" class="filter-active-students">All</li>
               <li data-filter=".filter-elementary-students">Elementary</li>
               <li data-filter=".filter-junior-high-students">Junior High</li>
+              <li data-filter=".filter-high-school-jazz-students">High School Jazz</li>
               <li data-filter=".filter-high-school-students">High School</li>
             </ul>
           </div>
@@ -387,6 +413,68 @@
             </div>
           </div>
           <!--***** end JH Band *****-->
+
+          <!--***** HS Jazz Band *****-->
+          <div class="col-lg-4 col-sm-12 mt-lg-0 students-item filter-high-school-jazz-students">
+            <div class="box" data-aos="zoom-in" data-aos-delay="300">
+              <span class="text-center">Central High Jazz Band</span>
+
+              <h4>Alto Saxophone</h4>
+              <ul>
+                <li>Johnathan Tribby</li>
+                <li>Evette Bullock</li>
+              </ul>
+
+              <h4>Tenor Saxophone</h4>
+              <ul>
+                <li>Madison Roland</li>
+              </ul>
+
+              <h4>Baritone Saxophone</h4>
+              <ul>
+                <li>Maycee Thompson</li>
+              </ul>
+
+              <h4>Trumpet</h4>
+              <ul>
+                <li>Andrew Lance</li>
+                <li>Brendan Yancey</li>
+                <li>Adrianna Magallanez</li>
+              </ul>
+
+              <h4>Trombone</h4>
+              <ul>
+                <li>Jarrett Benboe</li>
+                <li>Evander Caldon</li>
+                <li>Brayden Metclaf</li>
+              </ul>
+
+              <h4>Piano</h4>
+              <ul>
+                <li>Sean Winners</li>
+              </ul>
+
+              <h4>Guitar</h4>
+              <ul>
+                <li>Colorado Coomes</li>
+                <li>Connor Keen</li>
+              </ul>
+
+              <h4>Bass Guitar</h4>
+              <ul>
+                <li>Jay Zeunen III</li>
+              </ul>
+
+              <h4>Percussion</h4>
+              <ul>
+                <li>Chase Lewis</li>
+                <li>Caden Milles</li>
+                <!-- <h4 class="text-end text-decoration-none me-3 mt-3">*All-State</h4>
+                <h4 class="text-end text-decoration-none me-3">**All-Northwest</h4> -->
+              </ul>
+            </div>
+          </div>
+          <!--***** end HS Jazz Band *****-->
 
           <!--***** HS Band *****-->
           <div class="col-lg-4 col-sm-12 mt-lg-0 students-item filter-high-school-students">
