--- a/index.html
+++ b/index.html
@@ -169,29 +169,29 @@
             <h2 class="text-center mb-4"><span>McCormick Junior Band</span></h2>
 
             <div class="program-content">
-              <a href="#">ADD</a><span>ADD</span>
+              <a href="#">Winter Winds</a><span>Standridge</span>
             </div>
-            <!-- <div class="soloists">
-              Johnson Junior High Band
-            </div> -->
+            <div class="soloists">
+              Beginning Band | Intermediate Band | Advanced Band
+            </div>
           </div>
 
           <div class="col-lg-12 program-item filter-junior-high">
             <div class="program-content">
-              <a href="#">ADD</a><span>ADD</span>
+              <a href="#">A Dashing Gallop</a><span>arr. Roszell</span>
             </div>
-            <!-- <div class="soloists">
-              Johnson Junior High Band
-            </div> -->
+            <div class="soloists">
+              Advanced Band
+            </div>
           </div>
 
           <div class="col-lg-12 program-item filter-junior-high">
             <div class="program-content">
-              <a href="#">ADD</a><span>ADD</span>
+              <a href="#">Russian Christmas Music</a><span>arr. Story</span>
             </div>
-            <!-- <div class="soloists">
-              Features the percussion section
-            </div> -->
+            <div class="soloists">
+              Intermediate Band | Advanced Band | Some HS Students
+            </div>
           </div>
 
 
@@ -252,16 +252,16 @@
           <!-- *****End HS Band Program ***** -->
 
           <!-- ***** Combined Band Program *****-->
-          <!-- <div class="col-lg-12 program-item filter-high-school">
+          <div class="col-lg-12 program-item filter-high-school">
             <h2 class="text-center mb-4"><span>Central Triad Combined Band</span></h2>
 
             <div class="program-content">
-              <a href="#">ADD</a><span>ADD</span>
+              <a href="#">Up on a Haudted Housetop</a><span>arr. Watson</span>
             </div>
-            <div class="soloists">
+            <!-- <div class="soloists">
               South High Band
-            </div>
-          </div> -->
+            </div> -->
+          </div>
 
           <!-- *****End Combined Band Program ***** -->
         </div>
@@ -358,57 +358,137 @@
 
               <h4>Flute</h4>
               <ul>
-
+                <li>Fayth Blackmon</li>
+                <li>Anna Douglas</li>
+                <li>Wyatt Elder</li>
+                <li>Kassidy Heilig</li>
+                <li>Chloe Russell</li>
+                <li>Gemma Schilling</li>
+                <li>Samuel Bates</li>
+                <li>Keira Hammack</li>
+                <li>Corbin Heskett</li>
+                <li>Nico Johnson</li>
+                <li>Amaya Pineda</li>
+                <li>Elizabeth Wiles</li>
               </ul>
 
               <h4>Clarinet</h4>
               <ul>
-
+                <li>Melody Arnold</li>
+                <li>Mary Jackson</li>
+                <li>Arwen Dyba</li>
+                <li>Allison Gibson</li>
+                <li>Aiden LaRue</li>
+                <li>Taylee Young</li>
               </ul>
 
-              <h4>Bass Clarinet</h4>
+              <!-- <h4>Bass Clarinet</h4>
               <ul>
 
-              </ul>
+              </ul> -->
 
               <h4>Alto Saxophone</h4>
               <ul>
-
+                <li>Addison Miller</li>
+                <li>Ella Pauli</li>
+                <li>Evelyn Peterson</li>
+                <li>Susanna Scranton</li>
+                <li>Ahleena Burki</li>
+                <li>Maxwell Da Veiga</li>
+                <li>Zoey Nunn</li>
+                <li>Oakley Perea</li>
+                <li>Caleb Maurice Pineda</li>
+                <li>Bryce Schumaker</li>
+                <li>Alec Yurgilevich</li>
+                <li>Everett Gable</li>
               </ul>
 
               <h4>Tenor Saxophone</h4>
               <ul>
+                <li>Shawn McDermott</li>
+                <li>Michael Wilson</li>
+              </ul>
 
+              <h4>Bari Saxophone</h4>
+              <ul>
+                <li>Quinn Beadles</li>
+                <li>Samisoni Vahai</li>
               </ul>
 
               <h4>Horn</h4>
               <ul>
-
+                <li>Madison Burkart</li>
+                <li>Henry Lance</li>
+                <li>Jayden Morganroth</li>
+                <li>Angela Davis</li>
+                <li>Kaleigh Miller</li>
               </ul>
 
               <h4>Trumpet</h4>
               <ul>
-
+                <li>Evan Adams</li>
+                <li>Nicholas Coppinger</li>
+                <li>Ada Cox</li>
+                <li>Colbie Kibler</li>
+                <li>Nile Lacock</li>
+                <li>Ethan Walters</li>
+                <li>Jaxton Ahlstrom</li>
+                <li>Isaac Bluemel</li>
+                <li>Braden Lewis</li>
+                <li>Aaron Loredo-Hernandez</li>
+                <li>Ezekiel McCullough</li>
+                <li>Eli Solis</li>
+                <li>Parker Campbell</li>
+                <li>William Goodnough</li>
+                <li>Landon Mitchell</li>
               </ul>
 
               <h4>Baritone</h4>
               <ul>
-
+                <li>Wilson Pilger</li>
+                <li>Henry Kifer</li>
               </ul>
 
               <h4>Trombone</h4>
               <ul>
-
+                <li>Bryan Papel</li>
+                <li>Jack Anderson</li>
+                <li>Benjamin Baker</li>
+                <li>Logan Bennett</li>
+                <li>Nolan Knepper</li>
+                <li>Brett Vetter</li>
               </ul>
 
-              <h4>Tuba</h4>
+              <!-- <h4>Tuba</h4>
               <ul>
 
+              </ul> -->
+
+              <h4>Bass Xylophone</h4>
+              <ul>
+                <li>Andilyn Brenden</li>
               </ul>
 
               <h4>Percussion</h4>
               <ul>
-
+                <li>Cole Brightman</li>
+                <li>Maxwell Chambers</li>
+                <li>Roman Day</li>
+                <li>Wyatt Deball</li>
+                <li>Tessa Hernandez</li>
+                <li>Cooper Huck</li>
+                <li>Keira Hughes</li>
+                <li>Paxton Kaufman</li>
+                <li>Presley Kocjan</li>
+                <li>Logan Marcum</li>
+                <li>Colton Paul</li>
+                <li>Colt Richardson</li>
+                <li>Boden Rieman</li>
+                <li>Potter Rieman</li>
+                <li>Colton Schwab</li>
+                <li>Samuel Smedley</li>
+                <li>Logan Taylor</li>
+                <li>Jacob VanHorn</li>
               </ul>
             </div>
           </div>
