--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
               <a href="#">Winter Winds</a><span>Standridge</span>
             </div>
             <div class="soloists">
-              Beginning Band | Intermediate Band | Advanced Band
+              <li>Beginning Band</li>
+              <li>Intermediate Band</li>
+              <li>Advanced Band</li>
             </div>
           </div>
 
@@ -181,7 +183,7 @@
               <a href="#">A Dashing Gallop</a><span>arr. Roszell</span>
             </div>
             <div class="soloists">
-              Advanced Band
+              <li>Advanced Band</li>
             </div>
           </div>
 
@@ -190,7 +192,9 @@
               <a href="#">Russian Christmas Music</a><span>arr. Story</span>
             </div>
             <div class="soloists">
-              Intermediate Band | Advanced Band | Some HS Students
+              <li>Intermediate Band</li>
+              <li>Advanced Band</li>
+              <li>Some HS Students</li>
             </div>
           </div>
 
@@ -256,7 +260,7 @@
             <h2 class="text-center mb-4"><span>Central Triad Combined Band</span></h2>
 
             <div class="program-content">
-              <a href="#">Up on a Haudted Housetop</a><span>arr. Watson</span>
+              <a href="#">Up on a Haunted Housetop</a><span>arr. Watson</span>
             </div>
             <!-- <div class="soloists">
               South High Band
