--- a/index.html
+++ b/index.html
@@ -138,29 +138,29 @@
             </div> -->
 
             <div class="program-content">
-              <a href="#">ADD</a><span>ADD</span>
+              <a href="#">Jingle Bells</a><span>arr. Sweeney</span>
             </div>
-            <!-- <div class="soloists">
-              Hobbs Percussion
-            </div> -->
+            <div class="soloists">
+              <li>5th Grade Band</li>
+            </div>
           </div>
 
           <div class="col-lg-12 program-item filter-elementary">
             <div class="program-content">
-              <a href="#">ADD</a><span>ADD</span>
+              <a href="#">Sleigh Ride</a><span>arr. Story</span>
             </div>
-            <!-- <div class="soloists">
-              Beginning Band
-            </div> -->
+            <div class="soloists">
+              <li>5th and 6th Grade Bands</li>
+            </div>
           </div>
 
           <div class="col-lg-12 program-item filter-elementary">
             <div class="program-content">
-              <a href="#">ADD</a><span>ADD</span>
+              <a href="#">First Holiday Fanfare</a><span>Watson</span>
             </div>
-            <!-- <div class="soloists">
-              Intermediate Band
-            </div> -->
+            <div class="soloists">
+              <li>6th Grade Band</li>
+            </div>
           </div>
           <!-- *****End Elementary Band Program ***** -->
 
@@ -303,52 +303,232 @@
 
               <h4>Flute</h4>
               <ul>
-
+                <li>Brianna Johnes</li>
+                <li>Amie Nielson</li>
+                <li>Noelle Ogden</li>
+                <li>Aria Williams</li>
+                <li>Annabelle Smith</li>
+                <li>Sophia Spradlin</li>
+                <li>Grace Christopherson</li>
+                <li>Jacelyn Scott</li>
+                <li>Kensington Weber</li>
+                <li>Dustyn Cornwall</li>
+                <li>Remmi Kimmel</li>
+                <li>Seth Smith</li>
+                <li>Anneli Willms</li>
+                <li>Lucille Marcelli</li>
+                <li>Olivia Erickson</li>
+                <li>Madison Holloway</li>
+                <li>Mariah Schilling</li>
+                <li>Ariyanna Barrera</li>
+                <li>Linden Ellis</li>
+                <li>Brooklyn Nolan-Harper</li>
+                <li>Mariella Moyte</li>
+                <li>Waylon Robertson</li>
+                <li>Alice Wellman</li>
               </ul>
 
-              <h4>Oboe</h4>
+              <!-- <h4>Oboe</h4>
               <ul>
 
-              </ul>
+              </ul> -->
 
               <h4>Clarinet</h4>
               <ul>
-
+                <li>Caedan Ortillo</li>
+                <li>Aaliyah Jackson</li>
+                <li>Aubrey Schmitt</li>
+                <li>Andrea Carmine-Arroyo</li>
+                <li>Layla Lowe</li>
+                <li>Ella-Mae Orsak</li>
+                <li>Morgan Bixby</li>
+                <li>Rosealee Bowman</li>
+                <li>Sophia Baker</li>
+                <li>Kayleigh Oberg</li>
+                <li>Ayla Crystal</li>
+                <li>Sasha Wiggam</li>
+                <li>Payton Newth</li>
+                <li>Axe Pruitt</li>
+                <li>Theo Racines</li>
+                <li>Cosette Kellerman</li>
+                <li>Arianna Morgan</li>
+                <li>Addison Schimelepfnig</li>
+                <li>Courtney Scholl</li>
+                <li>Aubrey Smith</li>
+                <li>Adeline Voyles</li>
+                <li>Chloe Chandler</li>
+                <li>Zoe Groth</li>
+                <li>Aurelia Sampson</li>
+                <li>Monroe Seaberg</li>
+                <li>Nayessa Walsh</li>
+                <li>Ryker Dorr</li>
+                <li>Aubree Gablenz</li>
+                <li>Leila Little</li>
+                <li>Elizabeth McDermott</li>
+                <li>Zechariah Morganroth</li>
+                <li>Lylia Sepulveda</li>
+                <li>Rayne Walker</li>
               </ul>
 
               <h4>Alto Saxophone</h4>
               <ul>
+                <li>Lesme Feliciano</li>
+                <li>Wyatt Hutchings</li>
+                <li>Asher Crisler</li>
+                <li>Chase Dent</li>
+                <li>Shire Georges</li>
+                <li>Aiden Lehman</li>
+                <li>Ethan Adams</li>
+                <li>Dylann Anderson</li>
+                <li>Annaleese Gillespie</li>
+                <li>Jaxon Elkins</li>
+                <li>Riley Hannes</li>
+                <li>Monica Knepper</li>
+                <li>Ewan Buss</li>
+                <li>Noa Icenhower</li>
+                <li>Gabriella Juarez</li>
+                <li>Nathan Holland</li>
+                <li>Brady Ingersoll</li>
+                <li>Oliver Lockwood</li>
+                <li>Michael Pauli</li>
+                <li>James West</li>
+                <li>Caralie Clement</li>
+                <li>Matthew Goodnough</li>
+                <li>Aaron Keck</li>
+                <li>Everett Simineo</li>
+                <li>Macy Smith</li>
+                <li>Bryant Ahlstrom</li>
+                <li>Emilia Carrothers</li>
+                <li>Elizabeth McKen</li>
+              </ul>
 
+              <h4>Tenor Saxophone</h4>
+              <ul>
+                <li>Cohen Bishop</li>
+                <li>Josiah Medina</li>
+              </ul>
+
+              <h4>Baritone Saxophone</h4>
+              <ul>
+                <li>Gabriel Taylor</li>
+                <li>Brayden Leonard</li>
               </ul>
 
               <h4>Horn</h4>
               <ul>
-
+                <li>Ethan Frint</li>
+                <li>Felicity Cox</li>
+                <li>Ethan Ayars</li>
               </ul>
 
               <h4>Trumpet</h4>
               <ul>
-
+                <li>Liam Hudspeth</li>
+                <li>Ainslee Carpenter</li>
+                <li>Emily Hollister</li>
+                <li>Catiana Mathieu</li>
+                <li>Thomas Loftin</li>
+                <li>Leo Marsh</li>
+                <li>Elizabeth Perry</li>
+                <li>Cameryn Willmarth</li>
+                <li>Jack Eddy</li>
+                <li>Gabriella Mueller</li>
+                <li>Beckett Halvorson</li>
+                <li>Pricsilla Aragon-Loehr</li>
+                <li>Brody Hannes</li>
+                <li>Jackson Young</li>
+                <li>Jonas Bates</li>
+                <li>Trystin Hansen</li>
+                <li>Kassidy Larsen</li>
+                <li>Liz McKay</li>
+                <li>Adrien Rodriguez</li>
+                <li>Zoe Boyd</li>
+                <li>Aidrik Dobbin</li>
+                <li>Sydney Horen</li>
+                <li>Landon Palmer</li>
+                <li>Owen Facemire</li>
+                <li>Kenneth Massengill</li>
+                <li>Thomas Massengail</li>
+                <li>Jude Paris</li>
+                <li>Kobe Towell</li>
+                <li>Ellie Roberts</li>
+                <li>Analise Sylvia</li>
+                <li>Fabian Charpentier</li>
+                <li>Devlin Flores</li>
+                <li>Zaiden Garcia</li>
+                <li>Jag Brown</li>
+                <li>AnnaLizz Eubanks</li>
+                <li>Sean McCoy</li>
+                <li>Cyrus McNamee</li>
+                <li>Christian Quattrini</li>
+                <li>Matthew Trompke</li>
+                <li>Rowan Zieres</li>
               </ul>
 
               <h4>Trombone</h4>
               <ul>
-
+                <li>Colton Simmons</li>
+                <li>Brielle Bentley</li>
+                <li>Benjamin Boone-Green</li>
+                <li>Grayson Hesser</li>
+                <li>Parker Upton</li>
+                <li>Daniyal Khan</li>
+                <li>Kaleb Levery</li>
+                <li>Holt Pfister</li>
+                <li>Tristan Stolz</li>
+                <li>Lily Witt</li>
+                <li>Jack Parsons</li>
+                <li>Reese Dines</li>
+                <li>Tyler Dixon</li>
+                <li>Allison Cook</li>
+                <li>Mia Pearlman</li>
+                <li>Laila Anderson</li>
+                <li>Zack Kristensen</li>
+                <li>Logan Moon</li>
+                <li>Vincent Turner</li>
+                <li>Marshall Watson</li>
+                <li>Caleb Woods</li>
+                <li>Victoria Yocum</li>
+                <li>Benjamin Smoot</li>
+                <li>Lorelei Zieres</li>
               </ul>
 
               <h4>Baritone</h4>
               <ul>
-
+                <li>Camden Halvorson</li>
+                <li>Gage Colwell</li>
+                <li>Aubrey Urdiales</li>
               </ul>
 
               <h4>Tuba</h4>
               <ul>
-
+                <li>Apollo Gomez</li>
+                <li>JJ Watters</li>
               </ul>
 
               <h4>Percussion</h4>
               <ul>
-
+                <li>Kaydia Denison</li>
+                <li>Tucker Wall</li>
+                <li>Beniah Salinas</li>
+                <li>Kyrie Lang</li>
+                <li>Noah Rangel</li>
+                <li>Millie Bullock</li>
+                <li>Dalyn Sitton</li>
+                <li>Kaylee Hale</li>
+                <li>Helen Sones</li>
+                <li>Jerrod Ohrt</li>
+                <li>Kale Peterson</li>
+                <li>Roman Wheeler</li>
+                <li>Elyse Adams-Case</li>
+                <li>Milly McElvaney</li>
+                <li>Ian White</li>
+                <li>Alex Brandes</li>
+                <li>Gwendolyn Lane</li>
+                <li>Lily Loveridge</li>
+                <li>William Leban</li>
+                <li>Oliver Peyton</li>
+                <li>Michael Pixley</li>
               </ul>
 
             </div>
