changed order of directors

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
           <hr>
           <h2 class="text-center text-decoration-underline">Directors</h2>
           <h2 class="text-center">
-            Zamboni Brown<br>
             Hayden Butterfield<br>
             Phil Chambers<br>
+            Greg Streuber<br>
             Brendan Inkster<br>
-            Greg Streuber
+            Zamboni Brown
           </h2>
           <div class="btns">
             <a href="https://nam12.safelinks.protection.outlook.com/?url=https%3A%2F%2Fwww.nfhsnetwork.com%2Fevents%2Fcheyenne-central-high-school-cheyenne-wy%2Fevt67fa4dedcc&data=05%7C01%7Cbrandon.schumacher%40laramie1.org%7Cde7c6434d52542dd2b8708dbe9ef172a%7C56347f16d49f4e3fb94358f4f164aa30%7C1%7C0%7C638360985310356241%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&sdata=4eCnlO5Ruek200uLXX5%2BE3bfBfHnEej2OmQLHrhKUuY%3D&reserved=0"
